--- a/my-genius/css/style.css
+++ b/my-genius/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url("background.jpeg"); 
+    background-image: url("../images/background.jpeg"); 
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
