--- a/my-genius/css/style.css
+++ b/my-genius/css/style.css
@@ -56,7 +56,7 @@ body {
 }
 
 img {
-    max-height: 350px; /* Adjust the height as needed */
+    max-height: 350px; 
     width: auto;
     display: block;
 }
@@ -69,5 +69,5 @@ img {
 }
 
 .img-wrapper:hover {
-    transform: scale(1.1); /* Zoom in by 10% on hover */
+    transform: scale(1.1);
 }
