--- a/cssgrid-demo/css/style.css
+++ b/cssgrid-demo/css/style.css
@@ -85,3 +85,15 @@ body{
     grid-column: 3;
     grid-row: 3/ span 3;
 }
+
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(197, 129, 129);
+    color: white;
+    text-align: center;
+
+}
