--- a/site-redesign/css/style.css
+++ b/site-redesign/css/style.css
@@ -1,6 +1,6 @@
 h2 {
-    font-family: "etna", sans-serif;
-    font-weight: 400;
+    font-family: "etna-x-condensed", serif;
+    font-weight: 900;
     font-style: normal;
     color: #fad5ad;
     font-size: 50px;
